# BreezeTalk-Messenger

./: CMakeLists.txt  README.md  chatFunctions.js  chatListFunctions.js  chat_styles.css  enter_styles.css  generalFunctions.js  index.html  login.js  main.cpp  script.js  styles.css
client/: chatFunctions.js  chatListFunctions.js  login.js  registration.js
server/include/: database.h  globals.h  message.h  user.h  websocket.h
server/src/: database.cpp  globals.cpp  main.cpp  message.cpp  websocket.cpp
styles/: header_styles.css
